# babiniku.rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  out.wav.bak
.github/workflows/: windows.yml
crates/babiniku/: Cargo.toml
crates/babiniku/examples/: seedvc_mel_probe.rs  vevo_vs_seedvc_similarity.rs
crates/babiniku/src/: buildinfo.rs  ckpt.rs
crates/cosyvoice/examples/: pairwise_similarity.rs  similarity_over_time.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: main.rs
crates/seedvc/src/: bigvgan.rs  campplus.rs  lib.rs  mel.rs  pipeline.rs  regulator.rs  stream.rs
crates/vc-core/src/: bwe.rs  declick.rs
crates/vevo/examples/: offline_convert.rs  stream_probe.rs
crates/vevo/src/: lib.rs  repcodec.rs  stream.rs  vocos.rs
crates/xvc/: Cargo.toml
crates/xvc/src/: lib.rs  pipeline.rs
docs/: meanvc.md  seedvc.md  vevo.md  windows.md
examples/: abcheck.rs  asrcheck.rs  bncheck.rs  convert_v1.rs  ditcheck.rs  ditcheck2.rs
src/: config.rs  lib.rs  meanflow.rs
src/audio/: mel.rs
src/backends/: fast_u2pp.rs  mod.rs  vocos.rs
src/model/: attention.rs
src/v1/: fbank.rs  mod.rs
tests/: golden.rs  model.rs
tools/: README.md  convert_seedvc.py  gen_jvp_fixture.py  gen_seedvc_bigvgan_fixture.py  requirements.txt
tools/fixtures/: jvp.safetensors
